--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,4 @@
-$white: #fff;
-$blue: rgb(64, 50, 220);
+@import './color.scss';
 
 :root {
   --max-width: 1100px;
@@ -10,30 +9,24 @@ $blue: rgb(64, 50, 220);
 
   --foreground-rgb: 0, 0, 0;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --primary-glow: conic-gradient(from 180deg at 50% 50%,
+      #16abff33 0deg,
+      #0885ff33 55deg,
+      #54d6ff33 120deg,
+      #0071ff33 160deg,
+      transparent 360deg);
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1),
+      rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --tile-border: conic-gradient(#00000080,
+      #00000040,
+      #00000030,
+      #00000020,
+      #00000010,
+      #00000010,
+      #00000080);
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -48,24 +41,20 @@ $blue: rgb(64, 50, 220);
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+    --secondary-glow: linear-gradient(to bottom right,
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0),
+        rgba(1, 65, 255, 0.3));
 
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+    --tile-border: conic-gradient(#ffffff80,
+        #ffffff40,
+        #ffffff30,
+        #ffffff20,
+        #ffffff10,
+        #ffffff10,
+        #ffffff80);
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
@@ -88,6 +77,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 a {
@@ -101,17 +91,116 @@ a {
   }
 }
 
-img{
+img {
   max-width: 100%;
 }
-.fluid-container{
-  background-color: $white;
+
+.fluid-container {
   max-width: 90%;
   margin: 0 auto;
 }
-.container{
-  background-color: $white;
+
+.container {
   max-width: 1176;
   margin: 0 auto;
 }
 
+input[type="text"] {
+  padding: 6px 7px;
+  background-color: $white;
+  color: $gray;
+  width: 100%;
+  border: 1px solid $lightGray;
+  font-size: 14px;
+}
+
+input[type="submit"] {
+  background-color: $blue;
+  color: $white;
+  padding: 6px 8px;
+  border: 1px solid $blue;
+  font-size: 14px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $blueHover;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+.react-slideshow-container {
+  svg {
+    max-width: 15px;
+  }
+}
+
+.card {
+  background-color: $azure;
+  flex-basis: 23%;
+  margin-bottom: 2rem;
+  margin-right: 2%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+
+  .productImage{
+    width: 100%;
+    height: 150px;
+    display: inline-block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .productTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem 0;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: $pantone;
+    margin: 0;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  p {
+    color: $textColor;
+    font-size: 0.9rem;
+  }
+  .description{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-height: 1.3rem;
+  }
+}
+
+.productFlex {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 2rem auto;
+}
+
+.primaryButton {
+  display: inline-block;
+  padding: 0.7rem 1.5rem;
+  background-color: $blue;
+  color: #fff;
+  border-radius: 2rem;
+  font-size: 0.9rem;
+
+  &:hover {
+    background-color: $blueHover;
+  }
+}
