--- a/component/Navbar/Navbar.module.scss
+++ b/component/Navbar/Navbar.module.scss
@@ -48,3 +48,11 @@
         font-size: 12px;
     }
 }
+
+@media (max-width: 767px) {
+    .navbar{
+        img{
+            max-width: 70%;
+        }
+    }
+}
